; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/dsa/b53/extr_b53_common.c_b53_get_sset_count.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/dsa/b53/extr_b53_common.c_b53_get_sset_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dsa_switch = type { %struct.b53_device* }
%struct.b53_device = type { i32 }
%struct.phy_device = type { i32 }

@ETH_SS_STATS = common dso_local global i32 0, align 4
@ETH_SS_PHY_STATS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @b53_get_sset_count(%struct.dsa_switch* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.dsa_switch*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.b53_device*, align 8
  %9 = alloca %struct.phy_device*, align 8
  store %struct.dsa_switch* %0, %struct.dsa_switch** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load %struct.dsa_switch*, %struct.dsa_switch** %5, align 8
  %11 = getelementptr inbounds %struct.dsa_switch, %struct.dsa_switch* %10, i32 0, i32 0
  %12 = load %struct.b53_device*, %struct.b53_device** %11, align 8
  store %struct.b53_device* %12, %struct.b53_device** %8, align 8
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* @ETH_SS_STATS, align 4
  %15 = icmp eq i32 %13, %14
  br i1 %15, label %16, label %19

16:                                               ; preds = %3
  %17 = load %struct.b53_device*, %struct.b53_device** %8, align 8
  %18 = call i32 @b53_get_mib_size(%struct.b53_device* %17)
  store i32 %18, i32* %4, align 4
  br label %35

19:                                               ; preds = %3
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* @ETH_SS_PHY_STATS, align 4
  %22 = icmp eq i32 %20, %21
  br i1 %22, label %23, label %33

23:                                               ; preds = %19
  %24 = load %struct.dsa_switch*, %struct.dsa_switch** %5, align 8
  %25 = load i32, i32* %6, align 4
  %26 = call %struct.phy_device* @b53_get_phy_device(%struct.dsa_switch* %24, i32 %25)
  store %struct.phy_device* %26, %struct.phy_device** %9, align 8
  %27 = load %struct.phy_device*, %struct.phy_device** %9, align 8
  %28 = icmp ne %struct.phy_device* %27, null
  br i1 %28, label %30, label %29

29:                                               ; preds = %23
  store i32 0, i32* %4, align 4
  br label %35

30:                                               ; preds = %23
  %31 = load %struct.phy_device*, %struct.phy_device** %9, align 8
  %32 = call i32 @phy_ethtool_get_sset_count(%struct.phy_device* %31)
  store i32 %32, i32* %4, align 4
  br label %35

33:                                               ; preds = %19
  br label %34

34:                                               ; preds = %33
  store i32 0, i32* %4, align 4
  br label %35

35:                                               ; preds = %34, %30, %29, %16
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i32 @b53_get_mib_size(%struct.b53_device*) #1

declare dso_local %struct.phy_device* @b53_get_phy_device(%struct.dsa_switch*, i32) #1

declare dso_local i32 @phy_ethtool_get_sset_count(%struct.phy_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
